--- a/style.css
+++ b/style.css
@@ -1,16 +1,56 @@
 body, html {
     margin: 0;
     padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1em;
 } 
+img {
+    align-self: center;
+    width: 22px;
+    height: 22px;
+}
 
 .notification {
-    margin: 20px;
-    width: 300px;
-    border: 1px solid black;
+    margin: 30px auto;
+    width: 400px;
+    border: 0px solid black;
+    background-color: rgba(128, 128, 128, 0.25);
+    border-radius: 8px;
+    overflow: hidden;
 }
 .header {
-    background-color: gray;
+    padding-top: 0;
+    padding-bottom: 0;
+    display: flex;
+    align-items: baseline;
+    padding-right: 10px;
+    padding-left: 10px;
+    justify-content: space-between;
+    color: rgba(0, 0, 0, 0.65);
 }
-.messagebody {
-    background-color: chartreuse;
+.headercontent {
+    padding-left: 10px;
+    text-transform: uppercase;
+    font-weight: lighter;
+}
+.headertime {
+    text-transform: lowercase;
+    margin-left: auto;
+    font-weight: lighter;
+    font-size: 0.85em;
+}
+
+.who {
+    font-weight: 600;
+}
+
+.message {
+}
+.body {
+    margin: auto;
+    background-color: rgba(211, 211, 211, 0.9);
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-left: 18px;
+    padding-right: 50px;
 }
