add screenshot readme.md and credits

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
+/* 
+Simple iOS iPhone messages notification
+It's not 100% copy. 
+Feel free to edit files and adjust it to Your own projects.
+Author: PaweuB aka spinacz
+*/
+
 body, html {
     margin: 0;
     padding: 0;
